# leakguard-mcp

./: .gitignore  LICENSE  PUBLISHING.md  README.md  llms-install.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: release.yml
benchmark/: labels.json  labels_general.json  run.py
benchmark/corpus/: bad_01_future_return_feature.py  bad_02_centered_ma.py  bad_03_global_scaler.py  bad_04_kfold_cv.py  bad_05_backfill.py  bad_06_asof_forward.py  bad_07_alltime_high.py  bad_08_resample_label.py  bad_09_groupby_zscore.py  bad_10_mixed_pipeline.py  bad_11_lg001_multi_horizon_features.py  bad_12_lg001_variable_horizon.py  bad_13_lg002_centered_vol.py  bad_14_lg002_config_flag.py  bad_15_lg003_fullframe_zscore.py  bad_16_lg004_cross_val_score.py  bad_17_lg005_drop_keeps_target.py  bad_18_lg006_quantile_thresholds.py  bad_19_lg007_iv_backfill.py  bad_20_lg008_news_nearest.py  bad_21_lg009_minute_features.py  bad_22_lg010_symbol_vol_scaling.py  bad_23_lg002_lg007_smoothing.py  clean_01_trailing_features.py  clean_02_proper_split_scale.py  clean_03_forward_fill.py  clean_04_backward_asof.py  clean_05_timeseries_cv.py  clean_06_label_kept_as_target.py  clean_07_walk_forward_split.py  clean_08_negative_literals.py  clean_09_forward_label_only.py  (+7 more)
demo/: demo.tape  record_demo.py  strategy_leaky.py
leakguard/: __init__.py  cli.py  server.py
tests/: conftest.py  test_benchmark.py  test_lg001.py  test_lg002.py  test_lg003.py  test_lg004.py  test_lg005.py  test_lg006.py  test_lg007.py  test_lg008.py  test_lg009.py  test_lg010.py  test_scanner.py  test_server.py
(+46 files in other folders)
